--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             type="text"
             id="name"
             placeholder="Full Name"
+            name="name"
             required
             minlength="3"
             maxlength="100" />
@@ -30,18 +31,29 @@
             type="tel"
             id="phone"
             placeholder="555-555-5555"
+            name="phone"
             required
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
         </div>
         <!-- Email Address -->
         <div class="form-group Address">
           <label for="email">Email Address</label>
-          <input type="email" id="email" placeholder="email@address.com" required />
+          <input
+            type="email"
+            id="email"
+            placeholder="email@address.com"
+            name="email"
+            required />
         </div>
         <!-- Website URL -->
         <div class="form-group">
           <label for="website">Website URL</label>
-          <input type="url" id="website" placeholder="http://google.com" required />
+          <input
+            type="url"
+            id="website"
+            placeholder="http://google.com"
+            name="website"
+            required />
         </div>
         <!-- Password -->
         <div class="form-group">
@@ -61,6 +73,7 @@
             type="password"
             id="password2"
             placeholder="Confirm Password"
+            name="password"
             required
             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$" />
         </div>
